--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# MySQL Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/book_reservation?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Server port
+server.port=8080
 spring.application.name=backend
+
+# JWT Private Signature
+jwt.secret=MySuperSecretKeyForJWT
+jwt.expiration=36000000
+
