--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^12.34.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
