Create backend files

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.application.name=backend
 jwt.secret=8G7d2fU9kPq3Lwz4Xv6Rc9Tj8Bn5HsYupIsR4ftH67Q231T
 jwt.expiration=36000000
 
+# PayPal Sandbox
+paypal.client.id=YOUR_SANDBOX_BUSINESS_CLIENT_ID
+paypal.client.secret=YOUR_SANDBOX_BUSINESS_SECRET
+paypal.mode=sandbox
+
+
