--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -104,7 +104,13 @@
             <version>1.18.34</version>
             <scope>provided</scope>
         </dependency>
-	</dependencies>
+    <!--    Paypal    -->
+        <dependency>
+            <groupId>com.paypal.sdk</groupId>
+            <artifactId>checkout-sdk</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+    </dependencies>
 
     <build>
 		<plugins>
