Complete QR Generator and Mail service

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/book_reservation?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/book_reservation?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -23,3 +23,11 @@ paypal.client.secret=ECm3beNUDiysFjqbYPbsyCTCKDXqYYDNwQ0Ge7fP02-VoZugXjJ34iMHJFF
 paypal.mode=sandbox
 
 
+
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=Addmail
+spring.mail.password=Add password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
