Fix errors and update backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,8 +18,8 @@ jwt.secret=8G7d2fU9kPq3Lwz4Xv6Rc9Tj8Bn5HsYupIsR4ftH67Q231T
 jwt.expiration=36000000
 
 # PayPal Sandbox
-paypal.client.id=AZf97PST_Q8GuMmAnkgthYz_rWNtVsA1wYc6n7V9ZOi_C3yviNf5iuSaVntvTaDbrP8hczBB4FABN7qZ
-paypal.client.secret=ECm3beNUDiysFjqbYPbsyCTCKDXqYYDNwQ0Ge7fP02-VoZugXjJ34iMHJFFJfKRM3a4rG9WpXmLmag2r
+paypal.client.id=AWul4dHLhUACWvPaOPGtekxYBMc-9gpNPcj7vuh4uGYpqhJJADrH9aF85OFcZ43OqvopEmplGPbc7-DJ
+paypal.client.secret=EM5ql4s6QPUsd_6DL2RGPoh4bhYs8HAnYB-mIIDZmx1UtvR5rLm22C60NJYLCN__rWG6f1DGPMR0H4Wh
 paypal.mode=sandbox
 
 
@@ -27,7 +27,7 @@ paypal.mode=sandbox
 # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=Addmail
-spring.mail.password=Add password
+spring.mail.username=vihangakulathilake12m@gmail.com
+spring.mail.password=ynqiennzrwfjpelg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
